Bless v0.6.0 20080814
---------------------

* Read/Write support for block devices.
* Saving speed improvements.
* Rendering speed improvements.
* Various bug fixes (gna.org #9660, #10378, #11397, #10601)
* A lot of internal changes that pave the way for exciting features...

Bless v0.5.2 20070831
---------------------

* Pluginified Areas subsystem.
* Bless is now installed in a more standard location.
* Various bug fixes (gna.org #9313, #9543, #9664, #9659)

Bless v0.5.1 20070602
---------------------

* New Select All action.
* Plugin to perform bitwise operations on data.
* Added right-click popup menus.
* Workaround for Mono 1.1.x bug that caused incomplete gui (gna.org #8975)
* Various bug fixes (gna.org #8916, #9084, #9094)

Bless v0.5.0 20070330
---------------------

* Brand new plugin architecture (GUI and export).
* Export functionality (text and html, others with plugins).
* Reduced memory usage.
* Fixed garbled display issue (thanks to Thomas Liebetraut).
* Localization support.
* New ways to select data ranges.

Bless v0.4.1 20060803                                                  
---------------------
                     
* Fixed compilation problems with newer versions of Mono.
* Added a work-around for the long standing garbled display issue (See README). 

Bless v0.4.0 20051009
---------------------

* Upgraded widgets to Gtk# 2 (Gtk+ 2.4).
* Added a toolbar.
* Added highlighting of patterns matching the current selection.
* Added the ability to open files by dragging and dropping them into Bless.
* Improved build system (for packagers).
* Many bugfixes and usability improvements.

Bless v0.3.6.1 20050827
-----------------------

* Fixed build system problems

Bless v0.3.6 20050725
---------------------

* Added Preferences (undo limit, session loading options, default layout etc)
* Added the ability to change the statusbar information (offset, selection) 
  number base by clicking on it.