@@ -1,4 +1,4 @@
-Bless - Gtk# Hex Editor v0.6.0
+Bless - Gtk# Hex Editor v0.6.1
 ==============================
 Copyright (c) 2004-2018, Alexandros Frantzis
 
@@ -113,7 +113,7 @@ Become root and type 'make install'.
 5. Running
 ----------
 If you chose to install the program, just type 'bless'. In any case you can  
-run the program by typing 'bless' in the 'bless-a.b.c' directory.
+run the program by typing './bless' in the 'bless-a.b.c' directory.
 Enjoy!
 
 ----------------
