@@ -2,7 +2,7 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 	<!ENTITY legal SYSTEM "legal.xml">
-	<!ENTITY appversion "0.6.0">
+	<!ENTITY appversion "0.6.1">
 	<!ENTITY manrevision "1.0">
 	<!ENTITY date "Sep 2018">
 	<!ENTITY app "<application>Bless</application>">
